# poetry-cicd-example

./: .gitignore  .pylintrc  README.md  pyproject.toml
.github/workflows/: cicd-pipeline.yml
docker/: Dockerfile  docker-entrypoint.sh
src/plotter/: __init__.py  plotter.py
tests/: test_plotter.py
