[tool.poetry]
name = "plotter-cicd"
version = "1.0.0a5"
description = "Python template project"
authors = ["Frank Greguska <89428916+frankinspace@users.noreply.github.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/podaac/poetry-cicd-example"
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules"
]
exclude = ['contrib', 'docs', 'tests']
packages = [
    { include = "plotter", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.5"
matplotlib = "^3.6.2"


[tool.poetry.dev-dependencies]
pytest = "~7"
flake8 = "^3.8"
pytest-cov = "~4"
pylint = "~2"
Sphinx = "^3.3"

[tool.poetry.scripts]
plotter = 'plotter:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
